--- a/css/style.css
+++ b/css/style.css
@@ -147,6 +147,23 @@
       position: relative;
   }
   
+  /* Global layout container */
+.container {
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 24px;
+  padding-right: 24px;
+  box-sizing: border-box;
+}
+ 
+@media (max-width: 768px) {
+  .container {
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+}
+
   /* Prevent body scroll when mobile menu is open */
   body.mobile-menu-open {
       overflow: hidden;
